--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "node": "^22.16.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "sass": "^1.89.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
